--- a/youtube_video/templates/youtube/view.html
+++ b/youtube_video/templates/youtube/view.html
@@ -55,7 +55,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 						<div class="col-md-5 pull-right category-card-items">
 							{% if has_subject_permissions %}
-								<a href="" id="moreResources" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								<a href="" id="moreResources" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" {% if studentView %}style="display:none"{% endif %}>
 									<i class="fa fa-ellipsis-v" aria-hidden="true"></i>
 								</a>
 								<ul class="dropdown-menu pull-right" aria-labelledby="moreResources">
