--- a/subjects/templates/subjects/_form.html
+++ b/subjects/templates/subjects/_form.html
@@ -68,7 +68,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 							{% endif %}
 				{% endif %}
 				{% if field.auto_id == 'id_visible' or field.auto_id == 'id_display_avatar' %}
-					<div class="checkbox">
+					<div class="checkbox" {% if field.auto_id == 'id_display_avatar' %}style="display:none"{% endif %}>
 						<label for="{{ field.auto_id }}">
 	      					{% render_field field %} {{field.label}}
 	  					</label>
