--- a/topics/templates/resources/list.html
+++ b/topics/templates/resources/list.html
@@ -20,7 +20,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 		{% resource_permissions request.user resource as has_resource_permissions %}
 
 		{% if has_resource_permissions %}
-	  		<div class="list-group-item {% if not resource.visible %}disabled{% endif %}">
+	  		<div class="list-group-item {% if not resource.visible %}disabled student-view-hide{% endif %}" {% if not resource.visible %}{% if studentView %}style="display:none"{% endif %}{% endif %}>
 	  			<input type="hidden" class="id_inp_resource" name="id" value="{{ resource.id }}" />
 		    	<input type="hidden" class="order_inp_resource" name="order" value="{{ resource.order }}" />
 		    	<input type="hidden" class="url_order_resource" value="{% url 'topics:update_resource_order' %}" />
