Adding log datatables

--- a/dashboards/templates/dashboards/manager/index.html
+++ b/dashboards/templates/dashboards/manager/index.html
@@ -90,9 +90,11 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                                     {% trans "Highlights" %}
                                 </li>
                             </a>
+                            <a href="{% url 'dashboards:view_general_log' %}">
                                 <li>
-                                        {% trans "Log" %}
+                                    {% trans "Log" %}
                                 </li>
+                            </a>
                         </ul>
                     </div>
                 <div class="col-md-12">
