Removing image zoom from news

--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -309,7 +309,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 </div>
                 <div class="col-sm-4 col-xs-4">
                     <a class="" href="{% url 'subjects:home' %}">
-                        <img class="logo img-responsive" src="{{ theme.small_logo_url }}" alt="Logo" />
+                        <img class="logo img-responsive no_zoom" src="{{ theme.small_logo_url }}" alt="Logo" />
                     </a>
                 </div>
                 <div class="col-sm-4 col-xs-4">
