--- a/news/templates/news/view.html
+++ b/news/templates/news/view.html
@@ -48,7 +48,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                   <p>{{new.creator}}, em {{new.create_date}}</p>
                 </div>
                 <div class="col-md-12" style="margin-top: 20px; margin-bottom: 20px;">
-                  <span><img src="{% if new.image %}{{ new.image.url }}{% endif %}" width="100%"></span>
+                  <span><img class="no_zoom" src="{% if new.image %}{{ new.image.url }}{% endif %}" width="100%"></span>
                 </div>
                 <div class="col-md-12">
                   <br>
