--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -95,7 +95,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     <script src="{% static 'summernote/lang/summernote-lang.js' %}" type="text/javascript"></script>
 
 	{% if contrast_cookie %}
-	    <link rel="stylesheet" type="text/css" href="{% static 'css/themes/contrast.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/themes/contrast.css' %}">
 	{% else %}
 		{% with 'css/themes/'|add:theme.css_style|add:'.css' as theme_selected %}
 				<link rel="stylesheet" type="text/css" href="{% static theme_selected %}">
@@ -115,13 +115,34 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
     </script>
 
-    <script src="{% static 'js/zooming.min.js' %}"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
+    <script type="text/javascript" src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+    <link href="{% static 'imgViewer2/imgViewer2.min.css' %}" type="text/css" rel="stylesheet" />
+    <script src="{% static 'imgViewer2/imgViewer2.min.js' %}"></script>
 
     <script type="text/javascript">
-        var $zoom = null;
+        function AttachImgZoomCallback() {
+            $("img:not(.no_zoom)").click(function () {
+                let imgUrl = $(this).attr("src");
+
+                $("#image-lightbox .modal-body").html('<div style="text-align: center;"><img id="image-placeholder" src="" alt="" style="max-width: 100%; max-height: 100%;" /></div>');
+
+                $("#image-placeholder").attr('src', imgUrl);
+
+                $("#image-lightbox").modal("show");
+            });
+
+            $("#image-lightbox").on("shown.bs.modal", function (e) {
+                $("#image-placeholder").imgViewer2();
+            });
+
+            $("#image-lightbox").on("hidden.bs.modal", function (e) {
+                $("#image-lightbox .modal-body").html("");
+            });
+        }
         
         $(function () {
-            $zoom = new Zooming().listen('img:not(.no_zoom)');
+            AttachImgZoomCallback();
         });
     </script>
 </head>
@@ -437,6 +458,24 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="image-lightbox" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document" style="width: 99vw;height: 85vh;">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div style="text-align: center;">
+                        <img id="image-placeholder" src="" alt="" style="max-width: 100%; max-height: 100%;" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     {% block footer %}
     {% endblock %}
 
