--- a/dashboards/templates/dashboards/manager/log_datatable.html
+++ b/dashboards/templates/dashboards/manager/log_datatable.html
@@ -131,9 +131,9 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 </form>
             </div>
         </div>
-        
+
         <br clear="all" />
-        <p class="text-info small">{% trans 'If multiple words separated by spaces are passed, the table will search for each one individually. In case you want to search for multiple words as one sentence, wrap the words with quotes. Ex.: "one two"' %}</p>
+        <p class="text-default small"><i class="fa fa-info-circle"></i> {% trans 'If multiple words separated by spaces are passed, the table will search for each one individually. In case you want to search for multiple words as one sentence, wrap the words with quotes. Ex.: "one two"' %}</p>
 
         <div class="container" style="max-width: 100%">
             <div id="log_table" data-url="{% url 'dashboards:view_general_log' %}" class="row nopadding">
@@ -183,6 +183,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         });
         
         var options = {
+            "processing": true,
             "language": {
                 "lengthMenu": "{% trans 'Display _MENU_ records per page' %}",
                 "info": "{% trans 'Showing _START_ to _END_ of _TOTAL_ entries' %}",
@@ -193,7 +194,8 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 "paginate": {
                     "previous": "{% trans 'Previous' %}",
                     "next": "{% trans 'Next' %}"
-                }
+                },
+                "processing": '<i class="fa fa-spinner fa-spin fa-3x fa-fw text-primary"></i>',
             }
         };
 
