--- a/amadeus/static/css/themes/red_green.sass
+++ b/amadeus/static/css/themes/red_green.sass
@@ -29,14 +29,14 @@ $disabled-white: #E0E0E0
 $primary-disabled: #BDBDBD
 $secodnary-disabled: #E6E7E8
 
-$primary-category: #0277BC
+$primary-category: #015E96
 $secondary-category: #015E96
 
-$primary-subject: #02A8F2
-$secondary-subject: #0090E9
+$primary-subject: #0277BD
+$secondary-subject: #0277BD
 
-$primary-topic: #82B1FF
-$secondary-topic: #82B1FF
+$primary-topic: #1d8fe0
+$secondary-topic: #1d8fe0
 
 $btn-success: #015E96
 $btn-success-effect: #015E96
