--- a/amadeus/static/css/themes/red_green.sass
+++ b/amadeus/static/css/themes/red_green.sass
@@ -694,7 +694,7 @@ a.add-row
     color: #CCCCCC
 
 .post_action i, .post .post-user .user-action i, .comment .comment-user .user-action i
-    color: #1d8fe0
+    color: #333333
 
 .post .post-user, .comment .comment-user, .marked_user, .post_resource
     color: $primary-title
@@ -758,10 +758,10 @@ a.add-row
 /* === Chat === */
 
 .participant .user-info h4
-    color: $primary-title
+    color: #333333
 
 .modal_profile_sidebar h4, .message-view .message-user
-    color: $primary-title
+    color: #333333
 
 .participant .user-info .status, .modal_profile_sidebar .status, .subject-participants .status
     border-color: #888
